# finite-typelits-bounded

./: LICENSE  finite-typelits-bounded.cabal
src/Data/Finite/: Bounded.hs
src/Data/Finite/Bounded/: Internal.hs
test/: Spec.hs
