name:                finite-typelits-bounded
version:             0.1.0.0
synopsis:            A type inhabited by finitely many values, indexed by type-level naturals.
description:         A type inhabited by finitely many values, indexed by type-level naturals.
homepage:            https://github.com/pseudonom/finite-typelits-bounded
license:             BSD3
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Finite.Bounded, Data.Finite.Bounded.Internal
  build-depends:       base == 4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
