name:                finite-typelits-bounded
version:             0.1.0.0
synopsis:            A type inhabited by finitely many values, indexed by type-level naturals.
description:         A type inhabited by finitely many values, indexed by type-level naturals.
homepage:            https://github.com/pseudonom/finite-typelits-bounded
license:             BSD3
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Finite.Bounded, Data.Finite.Bounded.Internal
  build-depends:       base == 4.*
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite finite-typelits-bounded-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , finite-typelits-bounded
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pseudonom/finite-typelits-bounded
